# MfgFixNG

./: .gitignore  BuildRelease.bat  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.template  README.md  vcpkg.json
cmake/: XSEPlugin.cmake
src/: PCH.h  XSEPlugin.cpp
src/mfgfix/: ActorManager.h  BSFaceGenAnimationData.cpp  BSFaceGenAnimationData.h  ConsoleCommands.cpp  MfgConsoleFunc.cpp  Offsets.h  Settings.cpp  Settings.h  mfgfixinit.cpp
